Description du commit

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -7,8 +7,27 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Développeur Web - Voici mon porfolio afin de vous présentez mon travail éffectué pendant ma formation chez Openclassrooms"
     />
+
+    <script src="https://kit.fontawesome.com/7975d58b0a.js" crossorigin="anonymous"></script>
+
+    <!-- Balisage JSON-LD Schema.org -->
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "WebDeveloper",
+        "name": "Bénédicte SANSONNETTE - Développeur Web",
+        "image": "logo.png",
+        "telephone": "06 16 16 16 98 08",
+        "email": "benesanso34@gmail.com"
+      }
+    </script>
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -28,7 +47,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root"></i></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -39,5 +58,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"</script>
   </body>
 </html>
